# ast3

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TESTING_GUIDE.md  check_assignees.py  check_graphql.py  create_test_data.py  deploy.sh
.github/workflows/: backend.yml  dast.yml  frontend.yml
backend/: .dockerignore  Dockerfile  Dockerfile.backup  conftest.py  create_test_data.py  manage.py  pyproject.toml  seed_demo.py  temp_test.py
backend/accounts/: __init__.py  managers.py  middleware.py  models.py  schema.py  validators.py
backend/accounts/migrations/: 0001_initial.py  0002_add_parent.py  0003_alter_department_options_alter_user_options_and_more.py  __init__.py
backend/audit/: __init__.py  apps.py  models.py  schema.py
backend/audit/migrations/: 0001_initial.py  0002_alter_auditlog_actor.py  __init__.py
backend/audit/tests/: test_audit_log.py
backend/core/: __init__.py  asgi.py  celery.py  schema.py  urls.py  wsgi.py
backend/core/management/commands/: database_backup.py
backend/core/settings/: base.py  dev.py  prod.py  test.py
backend/integrations/: __init__.py  apps.py
backend/integrations/migrations/: 0001_initial.py  0002_remove_integrationjob_endpoint_and_more.py  __init__.py
backend/notifications/: __init__.py
backend/permissions/: helpers.py
backend/projects/: __init__.py  models.py  schema.py
backend/projects/migrations/: 0001_initial.py  __init__.py
backend/reports/: __init__.py  apps.py
backend/risks/: __init__.py  apps.py  models.py  schema.py  tasks.py
backend/risks/migrations/: 0001_initial.py  __init__.py
backend/tasks/: __init__.py  models.py  schema.py
backend/tasks/migrations/: 0001_initial.py  0002_alter_task_unique_together_alter_attachment_is_clean_and_more.py  0003_taskassignment.py  0004_add_task_comment_field.py  0005_comment_author_name_comment_number_and_more.py  __init__.py
backend/tracking/: __init__.py  apps.py  models.py  schema.py
backend/tracking/migrations/: 0001_initial.py  0002_remove_unique_constraint.py  __init__.py
backend/tracking/tests/: test_time_entry.py
client/: .eslintrc.cjs  index.html  package-lock.json  package.json  vite.config.ts
client/public/: bapack.html
client/src/: App.tsx
docs/: ROADMAP.md
docs/adr/: 0000-template.md  0001-graphql-library.md  0002-gantt-library.md  0003-authentication-scheme.md
docs/runbooks/: backup-restore.md  security-incident.md
infra/: .env.example  docker-compose.override.yml  docker-compose.yml  patch_seed.py  patch_seed2.py  verify_import.py
scripts/: backup.sh  generate-sbom.sh  restore.sh
(+30 files in other folders)
